<resources>
    <string name="app_name">Layout</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--LinearLayout elements strings-->
    <string name="to">mail</string>
    <string name="subject">Suibject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="validate">validate</string>

    <!--TableLayout elements strings-->
    <string name="table_layout_4_open">Open</string>
    <string name="table_layout_4_open_shortcut">Ctrl + O</string>
    <string name="table_layout_4_save">Save</string>
    <string name="table_layout_4_save_shortcut">Ctrl + S</string>

    <!--RelativeLayout elements strings-->
    <string name="reminder">reminder</string>
    <string name="done">done</string>

</resources>